--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,18 @@
-.App {
+.App{
+  background-image: linear-gradient(78.33deg, #034770 5.81%, #0F74B0 86.83%);
+  width: 100%;
+  height: 100vh;
+}
+.quizQuote{
+  color: aliceblue;
   text-align: center;
+  padding-top: 10%;
+  font-family: Roboto,'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif !important;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.QuizzApp{
   color: white;
-}
+  padding-top: 5%;
+  text-align: center;
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  font-family: SOurce sans Pro;
 }
